# sdkwork-comments

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/: README.md
apps/sdkwork-comments-common/: README.md
crates/sdkwork-api-comments-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-comments-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-comments-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-comments-database-host/: Cargo.toml
crates/sdkwork-comments-database-host/src/: lib.rs
crates/sdkwork-comments-engagement-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-comments-engagement-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-comments-engagement-repository-sqlx/src/: bootstrap.rs  lib.rs
crates/sdkwork-comments-engagement-repository-sqlx/tests/: comments_storage_standard.rs
crates/sdkwork-comments-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-comments-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-router-comments-app-api/: Cargo.toml  README.md
crates/sdkwork-router-comments-app-api/specs/: README.md  component.spec.json
crates/sdkwork-router-comments-app-api/src/: lib.rs
crates/sdkwork-router-comments-app-api/tests/: comments_app_routes_standard.rs
crates/sdkwork-router-comments-backend-api/: Cargo.toml  README.md
crates/sdkwork-router-comments-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-router-comments-backend-api/src/: lib.rs
crates/sdkwork-router-comments-backend-api/tests/: comments_backend_routes_standard.rs
crates/sdkwork-routes-comments-app-api/: Cargo.toml  README.md
crates/sdkwork-routes-comments-app-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-comments-app-api/src/: lib.rs
crates/sdkwork-routes-comments-app-api/tests/: comments_app_routes_standard.rs
crates/sdkwork-routes-comments-backend-api/: Cargo.toml  README.md
crates/sdkwork-routes-comments-backend-api/specs/: README.md  component.spec.json
crates/sdkwork-routes-comments-backend-api/src/: lib.rs
crates/sdkwork-routes-comments-backend-api/tests/: comments_backend_routes_standard.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_comments_baseline.sql  0001_comments_legacy_baseline.sql
database/ddl/baseline/sqlite/: 0001_comments_baseline.sql
database/seeds/common/: 001_bootstrap.sql
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
scripts/: comments-governance.test.mjs
sdks/: README.md  materialize-comments-v3-openapi-boundaries.mjs
sdks/_route-manifests/app-api/: sdkwork-router-comments-app-api.route-manifest.json  sdkwork-routes-comments-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-router-comments-backend-api.route-manifest.json  sdkwork-routes-comments-backend-api.route-manifest.json
sdks/sdkwork-comments-app-sdk/: .sdkwork-assembly.json  README.md  sdk-manifest.json
sdks/sdkwork-comments-app-sdk/openapi/: sdkwork-comments-app-api.openapi.yaml  sdkwork-comments-app-api.sdkgen.yaml
sdks/sdkwork-comments-app-sdk/sdkwork-comments-app-sdk-typescript/: package.json
sdks/sdkwork-comments-app-sdk/specs/: README.md  component.spec.json
sdks/sdkwork-comments-backend-sdk/: README.md  sdk-manifest.json
sdks/sdkwork-comments-backend-sdk/openapi/: sdkwork-comments-backend-api.openapi.yaml  sdkwork-comments-backend-api.sdkgen.yaml
sdks/sdkwork-comments-backend-sdk/sdkwork-comments-backend-sdk-typescript/: package.json
sdks/sdkwork-comments-backend-sdk/specs/: README.md  component.spec.json
specs/: README.md  component.spec.json  iam.module.manifest.json
tools/: materialize_comments_database_contract.mjs
