[workspace]
resolver = "2"
members = [
    "crates/sdkwork-api-comments-assembly",
    "crates/sdkwork-api-comments-assembly",
    "crates/sdkwork-comments-database-host",
    "crates/sdkwork-comments-engagement-repository-sqlx",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
sdkwork-comments-database-host = { path = "crates/sdkwork-comments-database-host" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
