[package]
name = "sdkwork-api-comments-assembly"
edition.workspace = true
version.workspace = true
description = "Generated API assembly for sdkwork-comments application HTTP plane."

[lib]
name = "sdkwork_api_comments_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork-routes-comments-app-api = { path = "../sdkwork-routes-comments-app-api" }
sdkwork-routes-comments-backend-api = { path = "../sdkwork-routes-comments-backend-api" }
