[package]
name = "sdkwork-comments-database-host"
edition = "2021"
license = "MIT"
version = "0.1.0"
description = "SDKWork Comments database lifecycle bootstrap."

[lib]
name = "sdkwork_comments_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork-database-config = { workspace = true }
sdkwork-database-lifecycle = { workspace = true }
sdkwork-database-spi = { workspace = true }
sdkwork-database-sqlx = { workspace = true }
