[package]
name = "sdkwork-comments-engagement-repository-sqlx"
version = "0.1.0"
edition = "2021"
description = "SDKWork comments SQLx storage contracts and migrations."
license = "MIT"

[lib]
name = "sdkwork_comments_engagement_repository_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-database-config = { path = "../../../sdkwork-pool/crates/sdkwork-database-config" }
sdkwork-database-sqlx = { path = "../../../sdkwork-pool/crates/sdkwork-database-sqlx" }
