[package]
name = "sdkwork-comments-engagement-repository-sqlx"
version = "0.1.0"
edition = "2021"
description = "SDKWork comments SQLx storage contracts and migrations."
license = "MIT"

[lib]
name = "sdkwork_comments_engagement_repository_sqlx"
path = "src/lib.rs"

[dependencies]
sdkwork-comments-database-host.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
