[package]
name = "sdkwork-comments-gateway-assembly"
edition.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-comments application HTTP plane."

[lib]
name = "sdkwork_comments_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_routes_comments_app_api.workspace = true
sdkwork_routes_comments_backend_api.workspace = true
